DSET-638 Update plugin name references

--- a/ckanext/extentsearch/fanstatic/webassets.yml
+++ b/ckanext/extentsearch/fanstatic/webassets.yml
@@ -1,11 +1,11 @@
 
-datesearch-js:
+extentsearch-js:
   contents:
     - moment.js
     - bootstrap-datepicker.js
     - daterangepicker-module.js
 
-datesearch-css:
+extentsearch-css:
   contents:
     - datepicker.css
 
