DSET-640 Rename elements to prevent conflict with Publication Year picker

--- a/ckanext/extentsearch/fanstatic/webassets.yml
+++ b/ckanext/extentsearch/fanstatic/webassets.yml
@@ -1,11 +1,11 @@
 
 extentsearch-js:
   contents:
-    - moment.js
-    - bootstrap-datepicker.js
-    - daterangepicker-module.js
+    - ds-moment.js
+    - ds-bootstrap-datepicker.js
+    - ds-daterangepicker-module.js
 
 extentsearch-css:
   contents:
-    - datepicker.css
+    - ds-datepicker.css
 
